# rlenv

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  CLOSEOUT_STATUS.md  DOMAIN_TRUTH.md  Dockerfile  LICENSE  PENDING_HUMAN_PHYSICS_SIGNOFF.md  README.md  V0.2.md  WRITEUP.md  YC_APP_DRAFT.md  pyproject.toml
.claude/: launch.json
docs/: openreward_card.md  openreward_integration.md  openreward_validation.md
results/: audit.md  clean_clone.md  results.md  scale_curve.md
results/parity_diag/: REPORT.md  analyze.py  capture.py  phase3.py
scripts/: README.md  check_determinism.py  play.py  run_evals.py  sanity_check.py  scale_curve.py  smoke_eval.sh  validate_openreward.py  webapp.py
src/nostart/: __init__.py  costs.py  grader.py  prompts.py  task.py  tools.py  world.py
src/nostart/domain/: __init__.py  components.py  propagation.py  scenarios.py
src/nostart/openreward/: __init__.py  env.py  server.py
tests/: test_grader.py  test_hard_tier.py  test_openreward_adapter.py  test_propagation.py  test_running_state.py  test_task.py
