[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "no-start-env"
version = "0.1.0"
description = "Agentic RL environment: diagnose vehicle no-start/charging faults"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/nostart"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
